# ants

./: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs
.github/workflows/: rust-CI.yml
proto/: ants.proto
src/: _tests.rs  config.rs  errors.rs  lib.rs  token.rs
src/example/: mod.rs
src/nodes/: checkout.rs  metadata.rs  mod.rs
src/postbox/: mod.rs  model.rs
src/postbox/message/: mod.rs  model.rs  set.rs  traits.rs  types.rs  wrapper.rs
src/worker/: README.md  broadcast.rs  drop.rs  mod.rs  model.rs  token.rs
src/worker/simple_consensus/: mod.rs  traits.rs
tests/: multi_nodes.rs
