workspace = { members = ["packages/multicast"] }
[package]
name = "ants"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "serve"
path = "bin/serve.rs"
required-features = ["example"]

[features]
debug = ["multicast/debug"]
example = ["local-ip-address"]

[dependencies]
axum = "0.7.4"
clap = { version = "4.5.3", features = ["derive"] }
futures = "0.3.30"
fxhash = "0.2.1"
local-ip-address = { version = "0.6.1", optional = true }
multicast = { path = "packages/multicast" }
prost = "0.12"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tonic = "0.11.0"

[dev-dependencies]
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.11.0"
